# ServerAndClientProject

./: .gitignore  CMakeLists.txt  Packaging Script.iss  README.md  cpp.hint  issues.md  软件设计与结构说明.md
cmake/: Plugin.cmake  ProjectSettings.cmake
devices/: CMakeLists.txt
devices/demo/: CMakeLists.txt  demo.json  plugindemo.cpp  plugindemo.h
docs/: style.txt  网络转发和磁盘映射配置文档.md  软件设计与结构说明.md  项目命名约定.md
example/: CMakeLists.txt
example/QPluginLoaderTest/: CMakeLists.txt
example/QtRemoteObjectsClient/: CMakeLists.txt  main.cpp
example/QtRemoteObjectsServer/: CMakeLists.txt  main.cpp
example/test/: CMakeLists.txt  TCase.cpp  TCase.h  main.cpp
include/: CMakeLists.txt  South.h  SouthGlobal.h  TaskManager.h  WorkHandler.h  common.h  global.h  iController.h  log.h  logger.h  share.h  share_lib.h  shared.h
include/common/: FileReadAndSave.ixx  file_read_and_save.h
include/config/: settings.h
include/controller/: CameraController.h  FaroController.h  TrolleyController.h  iController.h
include/core/: WSHandler.h
include/interface/: PluginDeviceInterface.h  QtPluginDeviceInterface.h  iCameraBase.h  iController.h  iPluginDevice.h  iSerialPort.h  icamera.h  serialport_protocol.h
include/network/: WebSocketClient.h  WebSocketServer.h
libs/Share/: CMakeLists.txt  DeviceState.h  StateEvent.cpp  StateEvent.h  TaskManager.cpp  WorkHandler.cpp  share.cpp  share_lib.cpp  shared.cpp  stdafx.h
libs/Share/log/: Logger.cpp
libs/South/: CMakeLists.txt  South.cpp  South_global.h  stdafx.h
libs/SouthStaticLib/: CMakeLists.txt  SouthStaticLib.cpp  SouthStaticLib.h
libs/network/: WebSocketClient.cpp  WebSocketServer.cpp
main/: ProjectSettings.cmake
main/MS301Client/: CMakeLists.txt  MS301Window.cpp  MS301Window.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  resources.qrc  stdafx.h
main/MS301Client/core/: ChildWidget.cpp  core_control.cpp  core_control.h
main/MS301Client/ui/: AboutDialog.cpp  MS301Window.cpp  MS301Window.h
main/client/: CMakeLists.txt  MainControl.cpp  MainControl.h  MainController.cpp  MainController.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  mainwindow.cpp  mainwindow.css  mainwindow.h  mainwindow.ui  readme.md  resources.qrc  stdafx.h
main/client/assets/docs/city/: guangzhou.json  shenzhen.json
main/client/assets/i18n/: en_US.ts
main/client/controller/: user_controller.cpp  user_controller.h
main/client/core/: ChildWidget.cpp  MainControl.cpp  MainControl.h  core_control.cpp  core_control.h
main/client/dialog/: AcquisitionWizard.cpp  AcquisitionWizard.h  HttpDialog.cpp  HttpDialog.h  WaitDialog.cpp  WaitDialog.h
main/client/ui/: AboutDialog.ui  CameraWidget.cpp  CameraWidget.h  IWidget.h  TrolleyWidget.cpp  TrolleyWidget.h  TrolleyWidget.ui  WebSocketWidget.cpp  WebSocketWidget.h
main/server/: CMakeLists.txt  UserServer.cpp  UserServer.h  main.cpp  server.qrc  stdafx.h
main/server/controller/: DvpCameraControllerServer.cpp  FaroControllerServer.cpp  TrolleyControllerServer.cpp
main/server/manager/: ManagerPlugin.cpp  ManagerPlugin.h
main/server/network/: HttpServer.cpp  HttpServer.h  WebSocketServer.cpp  WebSocketServer.h
modules/: CMakeLists.txt
modules/faro/: CMakeLists.txt  FaroHandle.cpp  FaroHandle.h  PointCloudHandle.cpp  PointCloudHandle.h  PointCloudImageGenerate.cpp  PointCloudImageGenerate.h  RealtimeSolving.cpp  RealtimeSolving.h  TaskHandle.cpp  TaskHandle.h  gFaro.h  gTask.h  imageserver.cpp  imageserver.h  logger.cpp  logger.h  main.cpp  readme.md  test.cpp
modules/faro/include/: iFaro.h  iTask.h
modules/faro_solving/: CMakeLists.txt  TaskHandle.h  case.cpp  iqopen.tli
plugin/CameraDvp/: CMakeLists.txt  CameraController.cpp  CameraController.h  CameraDvp.cpp  CameraDvp.h  CameraPlugin.cpp  CameraPlugin.h  CameraPlugin.json  CameraSDK.cpp  CameraSDK.h  DVPCamera.h  pch.h  resource.qrc  开发说明.txt
plugin/Cameras/: CMakeLists.txt  CameraPlugin.cpp  CameraPlugin.h  HiKvisionCamera.qrc
plugin/Cameras/Do3think/: DvpLineScanCamera.cpp  DvpLineScanCamera.h  dvp_line_scan_camera.cpp  dvp_line_scan_camera.h
plugin/Cameras/LineScanCamera/: DVPCamera.h  dvp_line_scan_camera.cpp  dvp_line_scan_camera.h  readme.md
plugin/Cameras/MVS/: HiKvisionCamera.cpp  HiKvisionCamera.h  hikvision_camera.cpp  hikvision_camera.h  readme.md
plugin/Scanner/: CMakeLists.txt  Faro.qrc  ScannerPlugin.cpp  ScannerPlugin.h  readme.md
plugin/Scanner/Faro/: FaroControl.cpp  FaroControl.h  FaroHandle.cpp  FaroHandle.h  iFaro.h
plugin/Scanner/Faro/api/: faro.ls.sdk.tlh  faro.ls.sdk.tli  iQOpen.tlh
plugin/ScannerFaro/: CMakeLists.txt  ScannerController.cpp  ScannerController.h  ScannerPlugin.cpp  ScannerPlugin.h  pch.h
plugin/Serial/: ActiveSerial.cpp  ActiveSerial.h  CMakeLists.txt  Serial.qrc  SerialPlugin.cpp  SerialPlugin.h  SerialPlugin.json  readme.md
plugin/Trolley/: CMakeLists.txt  TrollerController.cpp  TrolleyController.h  TrolleyPlugin.cpp  TrolleyPlugin.h  pch.h  trolley_control.cpp  trolley_control.h
programs/FaroPreview/: CMakeLists.txt  FaroHandle.cpp  FaroHandle.h  PointCloudImageGenerate.h  RealtimeSolving.cpp  RealtimeSolving.h  TaskHandle.cpp  TaskHandle.h  logger.cpp  logger.h  main.cpp
programs/FaroPreview/include/: iFaro.h  iTask.h  iTaskData.h
project/CameraClient/: CMakeLists.txt  CameraClient.qrc  CameraClient_en_US.qm  CameraClient_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
public/button/: ProjectItemRadioButton.cpp
public/dialog/: CreateNewProject.cpp  HttpDialog.cpp  HttpDialog.h  ToolTip.h  WaitDialog.cpp
public/gui/: ui.qrc
public/gui/dialog/: ToolTip.cpp  (+13 more)
public/serial/: ActiveSerial.cpp  ActiveSerial.h  LeiShenLidarN10Plus.cpp  LeiShenLidarN10Plus.h  LinsF400Imu.h
public/utils/: ImageSharpness.h  car_mileage_correction.h  scanner_utils.h  wasm_utils.h  windows_utils.h
public/widget/: AlarmToolButton.cpp  AlarmToolButton.h  LineChartView.cpp  LineChartView.h
scripts/: create_centralPosition.py  remove_autostart.bat  setup_autostart.bat  start_nginx.bat  stop_nginx.bat
test/: CMakeLists.txt  main.cpp
test/TestPlugin/: main.cpp
(+26 files in other folders)
